# ecoCystem

./: .gitmodules  CMakeLists.txt  README.md  TODO  TODO.md  imgui.ini
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c  glad.cpp
res/shaders/: triangle.fs  triangle.vs
src/: components.hpp  creature.cpp  creature.hpp  graphics.cpp  graphics.hpp  main.cpp  rng.cpp  rng.hpp  shader.cpp  shader.hpp  state.cpp  state.hpp  user_interface.cpp  user_interface.hpp  utilities.hpp  vec2.hpp  world.cpp  world.hpp
src/behaviors/: all_behaviors.hpp  behavior.hpp  wandering.cpp
src/systems/: all_systems.hpp  movement_system.cpp  system.cpp  system.hpp
